todo-backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project-namespace
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
